[Curl] Cookie Database files are wrongfully getting deleted when the database is opened https://bugs.webkit.org/show_bug.cgi?id=183051

Patch by Christopher Reid <chris.reid@sony.com> on 2018-02-23
Reviewed by Per Arne Vollan.

The file stat logic was backwards causing a wrongful detection of database corruption.
Fixed the logic and abstracted these calls to use FileSystem.

* platform/network/curl/CookieJarDB.cpp:

Canonical link: https://commits.webkit.org/198826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228971 268f45cc-cd09-0410-ab3c-d52691b4dbfc